--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             bottom: 0;
         }
     </style>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
     <header>
