--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     <footer>
         <p>&copy; 2024 Simple Web Page. All rights reserved.</p>
     </footer>
+
+    <div id="particles-js"></div> <!-- stats - count particles --> <div class="count-particles"> <span class="js-count-particles">--</span> particles </div>
         <script>
         // Initialize Netlify Identity
         if (window.netlifyIdentity) {
