--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             })
             .catch(error => console.error("Error fetching user data:", error));
         }
-            particlesJS("particles-js", {
+            let particlesJS = ("particles-js", {
             "particles": {
                 "number": {
                     "value": 109,
