--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             "retina_detect": true
         });
         var count_particles, stats, update;
-        stats = new Stats;
+        let stats = new Stats;
         stats.setMode(0);
         stats.domElement.style.position = 'absolute';
         stats.domElement.style.left = '0px';
