--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             },
             "retina_detect": true
         });
-        var count_particles, stats, update;
+        let count_particles;
         let stats = new Stats;
         stats.setMode(0);
         stats.domElement.style.position = 'absolute';
@@ -247,7 +247,7 @@
         stats.domElement.style.top = '0px';
         document.body.appendChild(stats.domElement);
         count_particles = document.querySelector('.js-count-particles');
-        update = function () {
+        let update = function () {
             stats.begin();
             stats.end();
             if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
