--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             "retina_detect": true
         });
         let count_particles;
-        let stats = new Stats;
+        let Stats;
         stats.setMode(0);
         stats.domElement.style.position = 'absolute';
         stats.domElement.style.left = '0px';
